--- a/beef-brisket.html
+++ b/beef-brisket.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Slow Cooked Texas Style Beef Brisket</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="beef-brisket.html">Slow Cooked Texas Style Beef Brisket</a>
+    <h1>Slow Cooked Texas Style Beef Brisket</h1>
 </body>
 </html>
