--- a/beef-brisket.html
+++ b/beef-brisket.html
@@ -7,5 +7,70 @@
 </head>
 <body>
     <h1>Slow Cooked Texas Style Beef Brisket</h1>
+
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F08%2F09%2F232137-slow-cooker-texas-smoked-beef-brisket-ddmfs-4x3-0039.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+    alt="Photo by dotdash meredith food studios"
+    width="373"
+    height="280">
+
+    <h2>Description</h2>
+
+    <p>Cook brisket in a crockpot with this wonderful and very easy recipe that's great on those really busy days. 
+        The recipe can be increased for a large group or downsized for 2 people. 
+        It reminds me of summers in <strong>Texas</strong>.
+    </p>
+
+    <h2>Ingredients</h2>
+    <h3>Brisket Rub:</h3>
+    <!-- tablespoons smoked paprika
+
+2 tablespoons ground black pepper
+
+2 tablespoons kosher salt
+
+1 tablespoon brown sugar
+
+1 tablespoon chili powder
+
+1 teaspoon ground cumin
+
+1 ½ pounds beef brisket -->
+    <ul>
+        <li>3 tablespoons smoked paprika</li>
+        <li>2 tablespoons ground black pepper</li>
+        <li>2 tablespoons kosher salt</li>
+        <li>1 tablespoon brown sugar</li>
+        <li>1 tablespoon chili powder</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 ½ pounds beef brisket</li>
+    </ul>
+
+    <!-- ¾ cup barbeque sauce
+
+¼ cup water (Optional)
+
+1 tablespoon Worcestershire sauce
+
+¼ teaspoon liquid smoke flavoring
+
+½ onion, sliced into rings -->
+    <h3>Barbeque Sauce:</h3>
+    <ul>
+        <li>¾ cup barbeque sauce</li>
+        <li>¼ cup water (Optional)</li>
+        <li>1 tablespoon Worcestershire sauce</li>
+        <li>¼ teaspoon liquid smoke flavoring</li>
+        <li>½ onion, sliced into rings</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Prepare brisket rub: Mix paprika, pepper, salt, brown sugar, chili powder, and cumin together in a bowl; rub evenly over brisket. Put brisket in a large, resealable plastic bag; refrigerate for 30 minutes to overnight.</li>
+        <li>When ready to cook, prepare barbeque sauce: Stir barbeque sauce, water, Worcestershire sauce, and liquid smoke together in the bottom of a slow cooker.</li>
+        <li>Remove brisket from the refrigerator and take out of the bag. Lay brisket in sauce in the slow cooker and arrange onions over top.</li>
+        <li>Cook on Low until brisket is very tender, 6 to 7 hours.</li>
+        <li>Rest brisket 10 minutes before slicing or shredding; serve with sauce from the slow cooker.</li>
+    </ol>
+    <a href="index.html">Odin Recipes</a>
 </body>
 </html>
