--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="beef-brisket.html">Slow Cooked Texas Style Beef Brisket</a></li>
+        <li><a href="chicken-nachos.html">Restaurant-Style Chicken Nachos</a></li>
     </ul>
 </body>
 </html>
