Added general chicken recipe

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="beef-brisket.html">Slow Cooked Texas Style Beef Brisket</a></li>
         <li><a href="chicken-nachos.html">Restaurant-Style Chicken Nachos</a></li>
+        <li><a href="general-chicken.html">General Tso's Chicken</a></li>
     </ul>
 </body>
 </html>
